--- a/style.css
+++ b/style.css
@@ -46,8 +46,11 @@ html {
   position: absolute;
   right: 0;
   top: 0;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 300;
+  padding: 4px 10px;
+  border: 1px solid;
+  border-radius: 50% / 60%;
 }
 
 .mood-wrapper {
@@ -140,7 +143,7 @@ html {
 
 .app-name span:nth-child(2) {
   font-weight: 200;
-  animation: spacing 3.5s ease-out alternate infinite;
+  animation: spacing 3s ease alternate infinite;
 }
 
 @keyframes spacing {
@@ -148,7 +151,7 @@ html {
     letter-spacing: 0;
   }
   100% {
-    letter-spacing: 0.08em;
+    letter-spacing: 0.2em;
   }
 }
 
@@ -404,7 +407,7 @@ body.dark-bg {
   }
 
   .share {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: 300;
   }
 
