--- a/style.css
+++ b/style.css
@@ -138,6 +138,23 @@ html {
 }
 
 
+.mood-circle.rotate {
+  animation: rotate-circle 0.8s ease-in-out 1;
+}
+
+
+@keyframes rotate-circle {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+
+
+
 .circle-date {
   cursor: pointer;
   font-size: 1.4rem;
@@ -210,7 +227,6 @@ html {
   padding: 10px 12px;
   border-radius: 20px;
   font-size: 1.2rem;
-
 }
 
 .theme-bubble {
@@ -232,8 +248,8 @@ html {
 }
 
 .toast {
-  right: 50px;
-  bottom: 50px;
+  right: 55px;
+  bottom: 55px;
   width: max-content;
   visibility: hidden;
 }
