--- a/style.css
+++ b/style.css
@@ -57,20 +57,23 @@ html {
   user-select: none;
 }
 
-.toggle-date {
+
+
+
+.toggle-date,
+.share,
+.question {
   display: inline-block;
   padding: 4px 8px;
-  margin-right: 8px;
   border: 1px solid;
   border-radius: 50% / 60%;
 }
 
-.share {
-  display: inline-block;
-  padding: 4px 8px;
-  border: 1px solid;
-  border-radius: 50% / 60%;
+
+.toggle-date {
+  margin-right: 10px;
 }
+
 
 
 .share-text {
@@ -79,6 +82,44 @@ html {
 }
 
 
+.question {
+  padding: 4px 6px 4px 7px;
+  border-radius: 50%;
+  margin-left: 10px;
+
+}
+
+
+.question-wrapper b {
+  font-weight: 500;
+}
+
+.question-wrapper p {
+  margin-top: 0.2em;
+  margin-bottom: 1.5em;
+}
+
+.question-wrapper p:nth-of-type(4) {
+  margin-bottom: 0em;
+}
+
+.question-wrapper {
+  position: absolute;
+  top: 30px;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  padding: 20px 15px;
+  border: 1px solid;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  line-height: 1.45;
+  z-index: 99;
+}
+
+.btn-close {
+  font-size: 1.5rem;
+}
 
 .mood-wrapper {
   display: flex;
@@ -619,6 +660,11 @@ body.dark-bg {
   border: 0;
 }
 
+
+.question-wrapper.dark {
+  background-color: #000;
+  color: #fff;
+}
 
 
 
