--- a/style.css
+++ b/style.css
@@ -63,18 +63,20 @@ html {
 
 .toggle-date,
 .share,
+.stat-btn,
 .question {
   display: inline-block;
   padding: 4px 8px;
   border: 1px solid;
   border-radius: 50% / 60%;
+  margin-left: 10px;
 }
 
-
-.toggle-date {
-  margin-right: 10px;
+.share,
+.stat-btn {
+  font-family: 'Material Icons';
+  border-radius: 50%;
 }
-
 
 
 .share-text {
@@ -227,6 +229,7 @@ html {
   font-size: 2.7rem;
   font-weight: 300;
   margin-bottom: 0.5em;
+  display: inline-block;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -585,6 +588,82 @@ html {
 }
 
 
+.stat-wrapper {
+  position: absolute;
+  width: 74%;
+  left: 50%;
+  top: 140px;
+  transform: translate(-50%, 0);
+  background: #fff;
+  border: 1px solid #000;
+  border-radius: 20px;
+  padding: 35px 20px 30px;
+  z-index: 99;
+}
+
+.stat-title {
+  font-size: 2em;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 12px;
+}
+
+.stat-date {
+  font-size: 2.8em;
+  font-weight: 300;
+  text-align: center;
+}
+
+.graph-wrapper {
+  height: 180px;
+  display: flex;
+  justify-content: center;
+}
+
+.graph-wrapper .stats {
+  display: flex;
+  text-align: center;
+  flex-direction: column-reverse;
+  margin-right: 18px;
+}
+
+.graph-wrapper .stats:nth-child(5) {
+  margin-right: 0px;
+}
+
+.stat-point,
+.stat-count {
+  font-size: 1.5em;
+  font-weight: 200;
+  margin-top: 8px;
+}
+
+.stats .stat-count {
+  margin-bottom: 2px;
+  font-weight: 400;
+}
+
+.stats .stat-bar {
+  width: 24px;
+  height: 20px;
+}
+
+.stats:nth-child(1) .stat-bar {
+  background: #e65744;
+}
+.stats:nth-child(2) .stat-bar {
+  background: #ff8f57;
+}
+.stats:nth-child(3) .stat-bar {
+  background: #fccc60;
+}
+.stats:nth-child(4) .stat-bar {
+  background: #5f8ef0;
+}
+.stats:nth-child(5) .stat-bar {
+  background: #36986d;
+}
+
 
 
 /* 다크모드 */
@@ -667,6 +746,11 @@ body.dark-bg {
   color: #fff;
 }
 
+
+.stat-wrapper.dark {
+  background: #000;
+  border-color: #fff;
+}
 
 
 
@@ -762,5 +846,13 @@ body.dark-bg {
   .date-picker-wrapper.close {
     transform: translate3d(0, 0, 0);
   }
+
+
+  .stat-wrapper {
+    width: 280px;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+
 
 }
