--- a/style.css
+++ b/style.css
@@ -599,6 +599,7 @@ html {
   border-radius: 20px;
   padding: 35px 20px 30px;
   z-index: 99;
+  font-family: 'Poppins', sans-serif;
 }
 
 .stat-title {
